<resources>
    <string name="app_name">Channels</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1206456892734598</string>
    <string name="who">/who :- This will show all  members in the broadcast.</string>
    <string name="add">/add -name- -country code- -phone number- :- This will add the contact into the broadcast.</string>
    <string name="feedback">/feedback -message-:- You can send feedback to our team.</string>
    <string name="delete">/delete :- This will delete the current broadcast.</string>
    <string name="clear">/clear :- This will be used to remove all messages on the screen.</string>
    <string name="shrug">/shrug :- appends  ¯\\_(ツ)_/¯ to the message. </string>
    <string name="help">/help :- This will list all the commands and their functionality.</string>
    <string name="pwd">/pwb :- This will show the present working broadcast.</string>
</resources>
